Fix: Simplified the way borders are drawn in the media credits table This eliminates the brief flash of a horizontal line visible when opening a media or cast page on older browsers Fix: Removed the negative bottom margin I added earlier on plot container to avoid overlaps

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -1679,26 +1679,10 @@ progress+span {
     outline: none;
     overflow: hidden;
     margin-top: 1em;
-    border: var(--defaultBorder);
     border-radius: var(--smallRadius);
     background-color: var(--lighterGradientPointAlpha);
-}
-
-@supports(display:revert) {
-    .itemDetailsGroup {
-        outline: var(--defaultBorder);
-        outline-offset: calc(-1 * var(--borderWidth));
-        border: none;
-    }
-
-    /* this somehow fixes border overflow on mobile */
-    .layout-mobile .itemDetailsGroup {
-        outline-offset: calc(-1 * var(--borderWidthDouble));
-    }
-}
-
-.itemDetailsGroup>div:not(:last-child) {
-    border-bottom: var(--defaultBorder);
+    border: none;
+    box-shadow: inset 0 0 0 .06em var(--borderColor) !important;
 }
 
 .detailsGroupItem {
@@ -1706,6 +1690,7 @@ progress+span {
     justify-content: space-between;
     padding: .5em .9em;
     align-items: baseline;
+    border-bottom: var(--defaultBorder);
 }
 
 .detailsGroupItem>.label {
@@ -1818,7 +1803,6 @@ progress+span {
 
 .layout-tv .detail-clamp-text {
     -webkit-line-clamp: 10;
-    margin-bottom: -1.5em;
     transition: none;
 }
 
